# openlink-client

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.vue  main.ts  quasar-user-options.ts  quasar-variables.sass
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_svc.rs  auth_svc.rs  brake_svc.rs  cmd.rs  emerg_svc.rs  launch_svc.rs  macros.rs  main.rs  packet.rs  remote_conn_svc.rs  users.rs
src-tauri/src/api/: auth.rs  controls.rs  link.rs  mod.rs  remote_conn.rs  telemetry.rs  users.rs
src-tauri/src/cert/: client.crt  client.key
src-tauri/src/temp_data/: device_list.json
src-yew/src/: main.rs
src/components/: Connect.vue  Controls.vue  DeviceAdd.vue  DeviceEdit.vue  DeviceInterface.vue  DeviceManager.vue  Login.vue  Notification.vue  PodStateDisplay.vue  Splash.vue  Telemetry.vue  UserAdd.vue  UserEdit.vue
src/libs/: device.ts  user.ts
src/pages/: Configure.vue  Dashboard.vue  Login.vue  Manage.vue  Start.vue  Telemetry.vue
src/services/: api.ts  router.ts
src/stores/: states.ts
src/styles/: quasar.sass  quasar.variables.sass
src/types/: podstate.ts  telemetry.ts
src/utils/: modelWrapper.ts
