[package]
name = "openlink-client"
version = "0.1.0"
description = "OpenLink Client"
authors = ["you"]
license = ""
repository = ""
default-run = "openlink-client"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
futures-util = "0.3"
quinn = "0.8"
rcgen = "0.8"
ring = "0.16"
rustls = { version = "0.20.2", features = ["dangerous_configuration"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features =["api-all"]}
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
