[package]
name = "openlink-client"
version = "0.1.0"
description = "OpenLink Client"
authors = ["you"]
license = ""
repository = ""
default-run = "openlink-client"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
futures-util = "0.3"
quinn = "0.9"
rcgen = "0.10"
ring = "0.16"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../../shared" }
tauri = { version = "1.0.4", features = ["api-all"] }
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
